# multi-node-nccl-p2p-benchmarks

./: Dockerfile  README.md  pyproject.toml
configs/: default.yaml  hostfile  nccl_env_tcp.sh
docs/: RCCL-on-instinct.md  roce-v2-investigation.md
results/: allreduce_tcp_16gpu.csv  p2p_intranode_h200.csv  sample_p2p_matrix.csv
src/p2p_bench/: cli.py  p2p.py  report.py
tests/: test_p2p.py
